Busca de dados API por meio de CEP DIA 4

--- a/dia-4/app/templates/home.html
+++ b/dia-4/app/templates/home.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>App1</title>
+    <title>Home</title>
   </head>
   <body>
-    <h1>Seja bem vindo ao APP 1</h1>
-    <a href="{% url "home2" %}">Ir para app 2</a>
+    <h1>Seja bem vindo ao app</h1>
+    <a href="{% url 'buscar_cep' %}">Buscar Endereço</a>
   </body>
 </html>
